--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "bluebird": "^3.5.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "mongoose": "^4.12.4"
+    "jsonwebtoken": "^8.1.0",
+    "mongoose": "^4.12.4",
+    "passport": "^0.4.0"
   }
 }
