--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1"
   }
 }
