--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -26,11 +26,12 @@
     "@ionic/storage": "2.0.1",
     "bower": "^1.8.2",
     "cordova-android": "6.3.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativeaudio": "^3.0.9",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -53,7 +54,8 @@
       "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
