--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
+    "cloudinary": "^1.9.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
+    "multiparty": "^4.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1"
   }
