--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -20,17 +20,33 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/file": "^4.4.2",
+    "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/file-transfer": "^4.4.2",
+    "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/image-picker": "^4.4.2",
+    "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "bower": "^1.8.2",
+    "com.synconset.imagepicker": "~2.1.8",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-filepath": "^1.1.0",
+    "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativeaudio": "^3.0.9",
+    "cordova-plugin-nativegeocoder": "^2.0.4",
     "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-telerik-imagepicker": "^2.1.8",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -51,7 +67,23 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "com.synconset.imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "To select photos for spots."
+      },
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-camera": {
+        "CAMERA_USAGE_DESCRIPTION": "To take photos for spots",
+        "PHOTOLIBRARY_USAGE_DESCRIPTION": "To select photos for spots"
+      },
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "cordova-plugin-nativegeocoder": {
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
+      }
     },
     "platforms": [
       "android",
