--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/file-transfer": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/image-picker": "^4.4.2",
+    "@ionic-native/launch-navigator": "^4.4.2",
     "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
@@ -35,9 +36,11 @@
     "com.synconset.imagepicker": "~2.1.8",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-filepath": "^1.1.0",
@@ -53,6 +56,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -83,6 +87,9 @@
       },
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
+      },
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
       }
     },
     "platforms": [
