--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -61,6 +61,22 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.4.0",
+    "angular-cli": "^1.0.0-beta.28.3",
+    "codecov": "^3.0.0",
+    "jasmine-core": "^2.9.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-istanbul": "^0.6.0",
+    "karma-requirejs": "^1.1.0",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-eslint-rules": "^4.1.1",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
