--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/file-transfer": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/image-picker": "^4.4.2",
+    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/launch-navigator": "^4.4.2",
     "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
