--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -31,7 +31,6 @@
     "@ionic-native/file-transfer": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/image-picker": "^4.4.2",
-    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/launch-navigator": "^4.4.2",
     "@ionic-native/native-geocoder": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
@@ -50,6 +49,7 @@
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-geolocation": "^3.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-nativegeocoder": "^2.0.4",
@@ -57,7 +57,6 @@
     "cordova-plugin-telerik-imagepicker": "^2.1.8",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -87,7 +86,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
@@ -111,7 +109,8 @@
       "cordova-plugin-camera": {
         "CAMERA_USAGE_DESCRIPTION": " ",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "To select photos for skate spots."
-      }
+      },
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
       "android",
