--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -58,6 +58,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
+    "moment": "^2.21.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.0",
