--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/image-picker": "^4.4.2",
     "@ionic-native/launch-navigator": "^4.4.2",
     "@ionic-native/native-geocoder": "^4.4.2",
+    "@ionic-native/onesignal": "^4.6.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
@@ -59,6 +60,7 @@
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
+    "onesignal-cordova-plugin": "^2.3.3",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.0",
@@ -111,7 +113,8 @@
         "CAMERA_USAGE_DESCRIPTION": " ",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "To select photos for skate spots."
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android",
