--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -60,6 +60,7 @@
     "cordova-plugin-telerik-imagepicker": "^2.1.8",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
     "onesignal-cordova-plugin": "^2.3.3",
