--- a/skatehub/package.json
+++ b/skatehub/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/crop": "^4.7.0",
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
     "@ionic-native/file-transfer": "^4.4.2",
@@ -44,6 +45,7 @@
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-camera": "^3.0.0",
+    "cordova-plugin-crop": "git+https://github.com/obeza/cordova-plugin-crop-with-ratio.git",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-file": "^5.0.0",
@@ -58,6 +60,7 @@
     "cordova-plugin-telerik-imagepicker": "^2.1.8",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.8.0",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "moment": "^2.21.0",
     "onesignal-cordova-plugin": "^2.3.3",
@@ -114,7 +117,8 @@
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "To select photos for skate spots."
       },
       "cordova-plugin-ionic-keyboard": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-crop": {}
     },
     "platforms": [
       "android",
